overlapping button on professional page fixed

--- a/ab3000/src/pages/css/hobbies-style.scss
+++ b/ab3000/src/pages/css/hobbies-style.scss
@@ -1,6 +1,5 @@
 $Raleway: "Raleway", sans-serif;
 
-
 .page-container {
   background: rgb(29, 29, 29);
   width: 100%;
@@ -14,7 +13,7 @@ $Raleway: "Raleway", sans-serif;
   margin: auto;
   width: 50%;
   border-radius: 25px;
-  background-color: rgba(0,0,0,0);
+  background-color: rgba(0, 0, 0, 0);
   color: pink;
   padding: 20px;
   line-height: 30px;
@@ -22,12 +21,11 @@ $Raleway: "Raleway", sans-serif;
   font-size: large;
 }
 
-
 .dividing-text {
   margin: auto;
   width: 50%;
   // border-radius: 25px;
-  background-color: rgba(0,0,0,0);
+  background-color: rgba(0, 0, 0, 0);
   color: pink;
   // padding: 5px;
   // line-height: 30 px;
@@ -66,9 +64,9 @@ $Raleway: "Raleway", sans-serif;
 } //intro-wrapper
 
 .card {
-    position: relative;
-    width: 100%;
-    transition: transform 0.8s;
+  position: relative;
+  width: 100%;
+  transition: transform 0.8s;
   height: 450px;
   cursor: pointer;
   transform-style: preserve-3d;
@@ -86,16 +84,15 @@ $Raleway: "Raleway", sans-serif;
     }
   } //card-image
   &:hover {
-    .card-image{
-        opacity: 0.4;
-        transition:all .9s;
+    .card-image {
+      opacity: 0.4;
+      transition: all 0.9s;
     }
     .hover-content {
       transition: all 0.9s;
     }
   }
 } //card
-
 
 .card:hover {
   .hover-content {
@@ -108,7 +105,7 @@ $Raleway: "Raleway", sans-serif;
   }
 }
 
-.container.carousel{
+.container.carousel {
   padding-left: 10px;
   padding-right: 10px;
   padding-bottom: 80px;
@@ -194,27 +191,24 @@ $Raleway: "Raleway", sans-serif;
 }
 
 .card__face--front {
-    background: rgb(0, 0, 0);
-    border-radius: 16px;
-    overflow: hidden;
-  }
-  
-
+  background: rgb(0, 0, 0);
+  border-radius: 16px;
+  overflow: hidden;
+}
 
 .card.is-flipped {
   transform: rotateY(180deg);
 }
 
-span{
+span {
   color: black;
 }
 
-.section.is-hidden{
+.section.is-hidden {
   display: none;
 }
 
-.coming-soon{
+.coming-soon {
   font-family: fantasy;
   color: pink;
 }
-
