--- a/ab3000/src/pages/css/professional-style.scss
+++ b/ab3000/src/pages/css/professional-style.scss
@@ -1,23 +1,23 @@
 
-  .button {
-    background-color: #000000;
-    border: none;
-    color: white;
-    padding: 10px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 16px;
-    margin: 4px 10px;
-    cursor: pointer;
-    transition: 0.3s;
-    border-radius: 20px;
+  // .button {
+  //   background-color: #000000;
+  //   border: none;
+  //   color: white;
+  //   padding: 10px;
+  //   text-align: center;
+  //   text-decoration: none;
+  //   display: inline-block;
+  //   font-size: 16px;
+  //   margin: 4px 10px;
+  //   cursor: pointer;
+  //   transition: 0.3s;
+  //   border-radius: 20px;
     
-  }
+  // }
   
-  .button:hover {
-    box-shadow: 2px 2px 10px black;
-  }
+  // .button:hover {
+  //   box-shadow: 2px 2px 10px black;
+  // }
   
   .page-container{
     background: rgb(29, 29, 29);
@@ -30,10 +30,11 @@
   
   .introduction-panel {
     margin: auto;
-    width: 50%;
+    width: 75%;
     border-radius: 25px;
-    background-color: rgba(255, 255, 255, 0.454);
-    padding: 20px;
+    font-family: Raleway;
+    padding: 10px;
+    color: pink;
     line-height: 30px;
   }
   
@@ -84,8 +85,6 @@
   border-radius: 20px;
 }
 
-
-
 .vertical-timeline.vertical-timeline-custom-line .vertical-timeline-element-icon {
   box-shadow: 0 0 0 4px rgb(249, 205, 255), inset 0 2px 0 rgba(0, 0, 0, 0.08), 0 3px 0 4px rgba(0, 0, 0, 0.05);
   
@@ -106,26 +105,10 @@ span{
 }
 
 
-// .skill{
-//   border-radius: 20px;
-//   display: inline-block;
-//   background-image:
-//   linear-gradient(
-//     to right, 
-//     rgb(208, 216, 255), #ffc1f5
-//   );
-//   padding: 10px;
-//   font-family: Raleway;
-//   font-weight: bold;
-//   margin: 5px;
-  
-// }
-
 .skill{
   display: inline-block;
-  // background:gray;
   background-color: #222222;
-  padding: 10px;
+  padding: 20px;
   font-family: Raleway;
   font-weight: bold;
   color: gray;
